bluetooth: Remove indicator only when there are no more devices connected

Before, if multiple devices were connected and we disconnected from one
we would remove the indicator even though a device could still be connected.

BUG=599281

Review URL: https://codereview.chromium.org/1848663002

Cr-Commit-Position: refs/heads/master@{#385942}

Former-commit-id: df4d79807643681b9bff15aa6dd7558230aed583